--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^16.1.0",
     "next-sanity": "^10.1.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -66,7 +66,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
